# PaxStressia

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml  pages.yml
client/godot/: .gitignore  Main.gd  Main.tscn  README.md  project.godot
docs/: CLIENT.md  DEPLOY.md  DESIGN.md  PROJECT_CONTEXT.md
harness/: audit.py  calibrate.py  run.py
proto/: README.md  build.py  index.html  preview.mjs  smoke.mjs
rules/: constants.json  edges.json  events.json  factions.json  initiatives.json  nodes.json  patrons.json  sources.json
rules/scenarios/grand/: constants.json  edges.json  factions.json  nodes.json  scenario.json
rules/scenarios/sahel_arc/: README.md  edges.json  events.json  factions.json  nodes.json  scenario.json
rules/schema/: constants.schema.json  edge.schema.json  event.schema.json  faction.schema.json  initiative.schema.json  node.schema.json  patrons.schema.json  scenario.schema.json  sources.schema.json
sim/: __init__.py  blocs.py  coalition.py  commands.py  elections.py  engine.py  events.py  factions.py  fog.py  legitimacy.py  markets.py  norms.py  patrons.py  policies.py  world.py
tests/: test_coalition.py  test_commands.py  test_determinism.py  test_endgame.py  test_engine.py  test_grand.py  test_markets.py  test_scenario_arc.py  test_schemas.py  test_sources_endings.py  test_thesis.py  test_transparency.py
